--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,4 +4,4 @@ encoding//WebContent/contact-us.html=UTF-8
 encoding//WebContent/index.jsp=UTF-8
 encoding//WebContent/product-services.html=UTF-8
 encoding//WebContent/register.jsp=UTF-8
-encoding//WebContent/user-validation.html=UTF-8
+encoding//WebContent/user-validation.jsp=UTF-8
